<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!--
    Los android:showAsAction="always|withText", "always" indica que el item SIEMPRE va a ser mostrado, si no hay lugar se muestra en otra barra 
    en la parte inferior en la pantalla si se definió android:uiOptions="splitActionBarWhenNarrow" en el Manifest.
    -->

    <item
        android:id="@+id/listLogic"
        android:icon="@drawable/list"
        android:showAsAction="always"
        android:title="@string/AnalyzerActionRawData">
    </item>
    <item
        android:id="@+id/zoomOutLogic"
        android:icon="@drawable/zoom_out"
        android:showAsAction="always"
        android:title="@string/AnalyzerActionZoomOut">
    </item>
    <item
        android:id="@+id/zoomInLogic"
        android:icon="@drawable/zoom_in"
        android:showAsAction="always"
        android:title="@string/AnalyzerActionZoomIn">
    </item>
    <item
        android:id="@+id/settingsLogic"
        android:icon="@drawable/settings_light"
        android:showAsAction="always"
        android:title="@string/AnalyzerActionConfig">
    </item>
    <item
        android:id="@+id/PlayPauseLogic"
        android:icon="@drawable/play"
        android:showAsAction="always"
        android:title="@string/AnalyzerActionPlay">
    </item>

</menu>