<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/PlayPauseLogic"
        android:icon="@drawable/play"
        android:showAsAction="ifRoom|withText"
        android:title="@string/AnalyzerActionPlay">
    </item>
    <item
        android:id="@+id/listLogic"
        android:icon="@drawable/chart2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/AnalyzerActionGraph">
    </item>
    <item
        android:id="@+id/restartLogic"
        android:icon="@drawable/restart"
        android:showAsAction="ifRoom|withText"
        android:title="@string/Restart" >
    </item>
    <item
        android:id="@+id/settingsLogic"
        android:icon="@drawable/settings_light"
        android:showAsAction="ifRoom|withText"
        android:title="@string/AnalyzerActionConfig">
    </item>

</menu>